--- a/index.html
+++ b/index.html
@@ -151,48 +151,7 @@
                       <th>Ações</th>
                     </tr>
                   </thead>
-                  <tbody>
-
-                    <tr>
-                      <td><img src="dist/img/user1-128x128.jpg" alt="User Image" class="img-circle img-sm"></td>
-                      <td>Fulano</td>
-                      <td>fulano@hcode.com.br</td>
-                      <td>Sim</td>
-                      <td>02/04/2018</td>
-                      <td>
-                        <button type="button" class="btn btn-primary btn-xs btn-flat">Editar</button>
-                        <button type="button" class="btn btn-danger btn-xs btn-flat">Excluir</button>
-                      </td>
-                    </tr>
-
-                    <tr>
-                      <td>
-                        <img src="dist/img/user1-128x128.jpg" alt="User Image" class="img-circle img-sm">
-                      </td>
-                      <td>Fulano</td>
-                      <td>fulano@hcode.com.br</td>
-                      <td>Sim</td>
-                      <td>02/04/2018</td>
-                      <td>
-                        <button type="button" class="btn btn-primary btn-xs btn-flat">Editar</button>
-                        <button type="button" class="btn btn-danger btn-xs btn-flat">Excluir</button>
-                      </td>
-                    </tr>
-
-                    <tr>
-                      <td>
-                        <img src="dist/img/user1-128x128.jpg" alt="User Image" class="img-circle img-sm">
-                      </td>
-                      <td>Fulano</td>
-                      <td>fulano@hcode.com.br</td>
-                      <td>Sim</td>
-                      <td>02/04/2018</td>
-                      <td>
-                        <button type="button" class="btn btn-primary btn-xs btn-flat">Editar</button>
-                        <button type="button" class="btn btn-danger btn-xs btn-flat">Excluir</button>
-                      </td>
-                    </tr>
-
+                  <tbody id="table-users">
                   </tbody>
                 </table>
               </div>
@@ -558,7 +517,7 @@
         <a target="_blank" href="https://www.hcode.com.br">Hcode</a>
       </div>
       <!-- Default to the left -->
-      Projeto desenvolvido no curso online de JavaScript da Hcode Treinamentos. Teste git
+      Projeto desenvolvido no curso online de JavaScript da Hcode Treinamentos.
     </footer>
 
   </div>
