Corrigido duplicidade de TR no js, criado classe User, chamando ela no html, e instanciando a nova classe no objetcUser

--- a/index.html
+++ b/index.html
@@ -517,11 +517,11 @@
         <a target="_blank" href="https://www.hcode.com.br">Hcode</a>
       </div>
       <!-- Default to the left -->
-      Projeto desenvolvido no curso online de JavaScript da Hcode Treinamentos.
+      Projeto desenvolvido no curso online de JavaScript da Hcode Treinamentos. Aluno: Silvio
     </footer>
 
   </div>
-
+  <script src="models/User.js"></script>
   <script src="index.js"></script>
 
 </body>
